--- a/Data/Work/George.ipynb
+++ b/Data/Work/George.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### George Chira "
+    "#### George Chira"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "4         0.0          3      8      1987  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "0.0"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,21 +593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of duplicate rows: 3"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Number of duplicate rows: 3\n"
      ]
     },
     {
@@ -703,7 +696,7 @@
        "20038     2.0        0.0          3      8      2009  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +807,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +920,7 @@
        "4  510000.0         1680      8       2.00         3     1.0"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1118,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1188,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1309,8 +1302,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check heteroscedasticity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
    ],
    "source": [
     "# Residuals vs. fitted values plot\n",
-    "# Fit a linear regression model\n",
+    "\n",
     "import statsmodels.api as sm \n",
     "X = house_df_relevant_no_outliers.drop(columns=['price'])\n",
     "y = house_df_relevant_no_outliers['price']\n",
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1534,6 +1534,120 @@
     "                             'Coefficient': model4.coef_})\n",
     "\n",
     "print(coefficients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actual Price</th>\n",
+       "      <th>Predicted Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9249</th>\n",
+       "      <td>13.384729</td>\n",
+       "      <td>13.342286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15718</th>\n",
+       "      <td>12.611541</td>\n",
+       "      <td>13.138715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18928</th>\n",
+       "      <td>13.270785</td>\n",
+       "      <td>12.881007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13512</th>\n",
+       "      <td>13.122365</td>\n",
+       "      <td>12.908413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17964</th>\n",
+       "      <td>13.329379</td>\n",
+       "      <td>12.931863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14116</th>\n",
+       "      <td>12.810391</td>\n",
+       "      <td>12.595544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>12.861001</td>\n",
+       "      <td>12.895258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10895</th>\n",
+       "      <td>13.385498</td>\n",
+       "      <td>13.143064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13272</th>\n",
+       "      <td>13.304687</td>\n",
+       "      <td>12.888293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14742</th>\n",
+       "      <td>11.982935</td>\n",
+       "      <td>12.795482</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Actual Price  Predicted Price\n",
+       "9249      13.384729        13.342286\n",
+       "15718     12.611541        13.138715\n",
+       "18928     13.270785        12.881007\n",
+       "13512     13.122365        12.908413\n",
+       "17964     13.329379        12.931863\n",
+       "14116     12.810391        12.595544\n",
+       "389       12.861001        12.895258\n",
+       "10895     13.385498        13.143064\n",
+       "13272     13.304687        12.888293\n",
+       "14742     11.982935        12.795482"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame with actual and predicted prices\n",
+    "comparison_df = pd.DataFrame({\n",
+    "    'Actual Price': y_test,\n",
+    "    'Predicted Price': y_pred4\n",
+    "})\n",
+    "\n",
+    "comparison_df.head(10)"
    ]
   },
   {
