--- a/index.ipynb
+++ b/index.ipynb
@@ -31,6 +31,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DATA UNDERSTANDING\n",
+    "\n",
+    "King  County Housing data contains sales price of properties  sold between y1 and y2 as well as various fetures for specific properties. The colums are well described below:\n",
+    "olumn Names and descriptions for Kings County Data Set\n",
+    "* **id** - unique identifier  for a house\n",
+    "* **dateDate** - This is the date whwn the house was sold\n",
+    "* **pricePrice** -  is prediction target\n",
+    "* **bedroomsNumber** - This is the number  of Bedrooms in the House\n",
+    "* **bathroomsNumber** -  of bathrooms/bedrooms\n",
+    "* **sqft_livingsquare** -  footage of the home\n",
+    "* **sqft_lotsquare** -  footage of the lot\n",
+    "* **floorsTotal** -  floors (levels) in house\n",
+    "* **waterfront** - House which has a view to a waterfront\n",
+    "* **view** - Has been viewed\n",
+    "* **condition** - How good the condition is ( Overall )\n",
+    "* **grade** - overall grade given to the housing unit, based on King County grading system\n",
+    "* **sqft_above** - square footage of house apart from basement\n",
+    "* **sqft_basement** - square footage of the basement\n",
+    "* **yr_built** - Built Year\n",
+    "* **yr_renovated** - Year when house was renovated\n",
+    "* **zipcode** - zip\n",
+    "* **lat** - Latitude coordinate\n",
+    "* **long** - Longitude coordinate\n",
+    "* **sqft_living15** - The square footage of interior housing living space for the nearest 15 neighbors\n",
+    "* **sqft_lot15** - The square footage of the land lots of the nearest 15 neighbors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -44,8 +82,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import os\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Datasets"
    ]
   },
   {
@@ -61,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +304,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Inspect the data frame\n",
+    "### finding the first 5 Inspect the data frame\n",
     "df.head()"
    ]
   },
@@ -292,6 +337,16 @@
     "\n",
     "print(f\"df.columns:{df.columns}\")\n",
     "print(f\"df.shape: {df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "King County dataset has:\n",
+    "\n",
+    "* **21597 observations** : This is the number of observations in the dataset\n",
+    "* **21 columns** : This is the number of variables in the dataset."
    ]
   },
   {
