--- a/Data/Work/Angel.ipynb
+++ b/Data/Work/Angel.ipynb
@@ -240,11 +240,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###Conduct EDA"
+   ]
   },
   {
    "cell_type": "code",
