--- a/Data/Work/Angel.ipynb
+++ b/Data/Work/Angel.ipynb
@@ -1048,31 +1048,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['price', 'bedrooms', 'bathrooms', 'zipcode', 'flr_1.5', 'flr_2.0',\n",
-       "       'flr_2.5', 'flr_3.0', 'flr_3.5', 'wtf_1.0', 'cdt_2', 'cdt_3', 'cdt_4',\n",
-       "       'cdt_5', 'grd_4', 'grd_5', 'grd_6', 'grd_7', 'grd_8', 'grd_9', 'grd_10',\n",
+       "Index(['bedrooms', 'bathrooms', 'zipcode', 'flr_1.5', 'flr_2.0', 'flr_2.5',\n",
+       "       'flr_3.0', 'flr_3.5', 'wtf_1.0', 'cdt_2', 'cdt_3', 'cdt_4', 'cdt_5',\n",
+       "       'grd_4', 'grd_5', 'grd_6', 'grd_7', 'grd_8', 'grd_9', 'grd_10',\n",
        "       'grd_11', 'grd_12', 'grd_13'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "house_df_categorical.columns[0:]\n"
+    "house_df_categorical.columns[1:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'price ~bedrooms+bathrooms+zipcode+flr_1.5+flr_2.0+flr_2.5+flr_3.0+flr_3.5+wtf_1.0+cdt_2+cdt_3+cdt_4+cdt_5+grd_4+grd_5+grd_6+grd_7+grd_8+grd_9+grd_10+grd_11+grd_12+grd_13'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formula = 'price ~'+ '+' .join(house_df_categorical.columns[1:])\n",
+    "formula\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1103,7 @@
      "traceback": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
       "  File \u001b[0;32m\"c:\\Users\\PC\\anaconda3\\envs\\learn-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3417\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[0;32m\"<ipython-input-107-145ef820b7ee>\"\u001b[0m, line \u001b[0;32m3\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    model = smf.ols(formula=f, data=house_df_categorical).fit()\n",
+      "  File \u001b[0;32m\"<ipython-input-116-dadf1f3528df>\"\u001b[0m, line \u001b[0;32m1\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    model= smf.ols(formula=formula, data = house_df_categorical).fit()\n",
       "  File \u001b[0;32m\"c:\\Users\\PC\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\base\\model.py\"\u001b[0m, line \u001b[0;32m169\u001b[0m, in \u001b[0;35mfrom_formula\u001b[0m\n    tmp = handle_formula_data(data, None, formula, depth=eval_env,\n",
       "  File \u001b[0;32m\"c:\\Users\\PC\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\formula\\formulatools.py\"\u001b[0m, line \u001b[0;32m63\u001b[0m, in \u001b[0;35mhandle_formula_data\u001b[0m\n    result = dmatrices(formula, Y, depth, return_type='dataframe',\n",
       "  File \u001b[0;32m\"c:\\Users\\PC\\anaconda3\\envs\\learn-env\\lib\\site-packages\\patsy\\highlevel.py\"\u001b[0m, line \u001b[0;32m309\u001b[0m, in \u001b[0;35mdmatrices\u001b[0m\n    (lhs, rhs) = _do_highlevel_design(formula_like, data, eval_env,\n",
@@ -1099,9 +1120,8 @@
     }
    ],
    "source": [
-    "import statsmodels.formula.api as amf\n",
-    "f='price~bedrooms+bathrooms+zipcode+flr_1.5+flr_2.0+flr_2.5+flr_3.0+flr_3.5+wtf_1.0+cdt_2+cdt_3+cdt_4+cdt_5+grd_4+grd_5+grd_6+grd_7+grd_8+grd_9+grd_10+grd_11+grd_12+grd_13'\n",
-    "model = smf.ols(formula=f, data=house_df_categorical).fit()"
+    "model= smf.ols(formula=formula, data = house_df_categorical).fit()\n",
+    "model.summary()"
    ]
   }
  ],
