--- a/Data/Work/Ruth.ipynb
+++ b/Data/Work/Ruth.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,22 +1279,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X = Housing_df[[\"sqft_living_log\",\"grade\",\"bedrooms_log\"]]\n",
-    "Y = Housing_df[[\"price\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n"
+    "## Modelling"
    ]
   },
   {
@@ -1303,27 +1291,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegression()\n",
-    "model.fit(x_train, y_train)\n",
-    "y_pred = model.predict(x_test)\n",
+    "Formula = \"price ~ sqft_living_log\"\n",
     "\n",
-    "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, y_pred)}\")\n",
-    "print(f\"R-squared: {r2_score(y_test, y_pred)}\")"
+    "\n",
+    "model = ols(Formula, Housing_df).fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = Housing_df[[\"sqft_living_log\",\"grade\",\"bathrooms_log\"]]\n",
+    "X1 = Housing_df[[\"sqft_living_log\"]]\n",
     "Y = Housing_df[[\"price\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,25 +1318,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 171971.1435468919\n",
-      "R-squared: 0.4455427272124267\n"
+      "Mean Absolute Error: 184814.71544783007\n",
+      "R-squared: 0.37351179603396256\n"
      ]
     }
    ],
    "source": [
     "model1 = LinearRegression()\n",
     "model1.fit(x1_train, y_train)\n",
-    "y_pred = model1.predict(x_test)\n",
+    "y_pred = model1.predict(x1_test)\n",
     "\n",
     "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, y_pred)}\")\n",
     "print(f\"R-squared: {r2_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = Housing_df[[\"sqft_living_log\",\"grade\",\"bedrooms_log\"]]\n",
+    "Y = Housing_df[[\"price\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x2_train, x2_test, y_train, y_test = train_test_split(X2, Y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 168599.90978639066\n",
+      "R-squared: 0.4694069031064554\n"
+     ]
+    }
+   ],
+   "source": [
+    "model2 = LinearRegression()\n",
+    "model2.fit(x2_train, y_train)\n",
+    "y_pred = model2.predict(x2_test)\n",
+    "\n",
+    "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, y_pred)}\")\n",
+    "print(f\"R-squared: {r2_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X3 = Housing_df[[\"sqft_living_log\",\"grade\",\"bathrooms_log\"]]\n",
+    "Y = Housing_df[[\"price\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x3_train, x3_test, y_train, y_test = train_test_split(X3, Y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 167668.12702293452\n",
+      "R-squared: 0.47077814357641456\n"
+     ]
+    }
+   ],
+   "source": [
+    "model3 = LinearRegression()\n",
+    "model3.fit(x3_train, y_train)\n",
+    "y_pred = model3.predict(x3_test)\n",
+    "\n",
+    "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, y_pred)}\")\n",
+    "print(f\"R-squared: {r2_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= r\"C:\\Users\\Ruth Kioko\\Desktop\\DSC_COURSE\\PHASE2REPOS\\CHECKPOINTS\\Group-5-phase-2-project\\kc_house_data.csv\"\n",
+    "df = pd.read_csv(path, index_col=0)\n"
    ]
   }
  ],
