edited final values on ols

--- a/Data/Work/George.ipynb
+++ b/Data/Work/George.ipynb
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1384,8 +1384,8 @@
      "output_type": "stream",
      "text": [
       "Model 1 - Simple Regression with One Feature (grade): \n",
-      " MAE: 0.00550114926795222, \n",
-      " R_squared: 0.3212307307747677\n"
+      " MAE: 0.2783724046608546, \n",
+      " R_squared: 0.3220043229391537\n"
      ]
     }
    ],
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1626,12 +1626,10 @@
      "output_type": "stream",
      "text": [
       "Model 4 - Comprehensive Regression with All Features: \n",
-      " MAE: 0.005317039453265067, \n",
-      " R_squared: 0.37902514190062364\n",
-      "       Feature  Coefficient\n",
-      "0  sqft_living     0.008462\n",
-      "1        grade     0.030754\n",
-      "2    bathrooms    -0.002725\n"
+      " MAE: 0.26385762289551173, \n",
+      " R_squared: 0.4006841607461159\n",
+      "Features included in Model 4:\n",
+      "['sqft_living', 'grade', 'bathrooms', 'waterfront', 'zipcode']\n"
      ]
     }
    ],
@@ -1655,16 +1653,13 @@
     "r2_4 = r2_score(y_test, y_pred4)\n",
     "print(f\"Model 4 - Comprehensive Regression with All Features: \\n MAE: {mae4}, \\n R_squared: {r2_4}\")\n",
     "\n",
-    "# Feature coefficients for Model 4\n",
-    "coefficients = pd.DataFrame({'Feature': X4_train.columns,   \n",
-    "                             'Coefficient': model4.coef_})\n",
-    "\n",
-    "print(coefficients)"
+    "print(\"Features included in Model 4:\")\n",
+    "print(X4_train.columns.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1673,31 +1668,31 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>          <td>price</td>      <th>  R-squared:         </th>  <td>   0.368</td> \n",
+       "  <th>Dep. Variable:</th>          <td>price</td>      <th>  R-squared:         </th> <td>   0.395</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.368</td> \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.395</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   3705.</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   2491.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Jul 2024</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sat, 20 Jul 2024</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:10:11</td>     <th>  Log-Likelihood:    </th>  <td>  84362.</td> \n",
+       "  <th>Time:</th>                 <td>00:15:42</td>     <th>  Log-Likelihood:    </th> <td> -5842.0</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td> 19076</td>      <th>  AIC:               </th> <td>-1.687e+05</td>\n",
+       "  <th>No. Observations:</th>      <td> 19076</td>      <th>  AIC:               </th> <td>1.170e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td> 19072</td>      <th>  BIC:               </th> <td>-1.687e+05</td>\n",
+       "  <th>Df Residuals:</th>          <td> 19070</td>      <th>  BIC:               </th> <td>1.174e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>      <td> </td>    \n",
+       "  <th>Df Model:</th>              <td>     5</td>      <th>                     </th>     <td> </td>    \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>      <td> </td>    \n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1705,189 +1700,123 @@
        "       <td></td>          <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Intercept</th>   <td>    0.7167</td> <td>    0.001</td> <td>  511.160</td> <td> 0.000</td> <td>    0.714</td> <td>    0.719</td>\n",
+       "  <th>Intercept</th>   <td> -111.2464</td> <td>    4.488</td> <td>  -24.788</td> <td> 0.000</td> <td> -120.043</td> <td> -102.450</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>sqft_living</th> <td>    0.0305</td> <td>    0.001</td> <td>   40.872</td> <td> 0.000</td> <td>    0.029</td> <td>    0.032</td>\n",
+       "  <th>sqft_living</th> <td>    0.4358</td> <td>    0.010</td> <td>   43.434</td> <td> 0.000</td> <td>    0.416</td> <td>    0.455</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>grade</th>       <td>    0.0427</td> <td>    0.001</td> <td>   47.741</td> <td> 0.000</td> <td>    0.041</td> <td>    0.044</td>\n",
+       "  <th>grade</th>       <td>    1.6132</td> <td>    0.032</td> <td>   49.746</td> <td> 0.000</td> <td>    1.550</td> <td>    1.677</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>bathrooms</th>   <td>   -0.0023</td> <td>    0.000</td> <td>   -8.655</td> <td> 0.000</td> <td>   -0.003</td> <td>   -0.002</td>\n",
+       "  <th>bathrooms</th>   <td>   -0.0954</td> <td>    0.015</td> <td>   -6.297</td> <td> 0.000</td> <td>   -0.125</td> <td>   -0.066</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>waterfront</th>  <td>    0.3843</td> <td>    0.050</td> <td>    7.736</td> <td> 0.000</td> <td>    0.287</td> <td>    0.482</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>zipcode</th>     <td>    0.0012</td> <td> 4.57e-05</td> <td>   26.261</td> <td> 0.000</td> <td>    0.001</td> <td>    0.001</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>132.821</td> <th>  Durbin-Watson:     </th> <td>   1.979</td>\n",
+       "  <th>Omnibus:</th>       <td>33.323</td> <th>  Durbin-Watson:     </th> <td>   1.980</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td> 115.297</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  28.754</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.138</td>  <th>  Prob(JB):          </th> <td>9.20e-26</td>\n",
+       "  <th>Skew:</th>          <td>-0.039</td> <th>  Prob(JB):          </th> <td>5.70e-07</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 2.737</td>  <th>  Cond. No.          </th> <td>    201.</td>\n",
+       "  <th>Kurtosis:</th>      <td> 2.827</td> <th>  Cond. No.          </th> <td>1.85e+08</td>\n",
        "</tr>\n",
-       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.85e+08. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:                  price   R-squared:                       0.368\n",
-       "Model:                            OLS   Adj. R-squared:                  0.368\n",
-       "Method:                 Least Squares   F-statistic:                     3705.\n",
-       "Date:                Tue, 16 Jul 2024   Prob (F-statistic):               0.00\n",
-       "Time:                        21:10:11   Log-Likelihood:                 84362.\n",
-       "No. Observations:               19076   AIC:                        -1.687e+05\n",
-       "Df Residuals:                   19072   BIC:                        -1.687e+05\n",
-       "Df Model:                           3                                         \n",
+       "Dep. Variable:                  price   R-squared:                       0.395\n",
+       "Model:                            OLS   Adj. R-squared:                  0.395\n",
+       "Method:                 Least Squares   F-statistic:                     2491.\n",
+       "Date:                Sat, 20 Jul 2024   Prob (F-statistic):               0.00\n",
+       "Time:                        00:15:42   Log-Likelihood:                -5842.0\n",
+       "No. Observations:               19076   AIC:                         1.170e+04\n",
+       "Df Residuals:                   19070   BIC:                         1.174e+04\n",
+       "Df Model:                           5                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "===============================================================================\n",
        "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
        "-------------------------------------------------------------------------------\n",
-       "Intercept       0.7167      0.001    511.160      0.000       0.714       0.719\n",
-       "sqft_living     0.0305      0.001     40.872      0.000       0.029       0.032\n",
-       "grade           0.0427      0.001     47.741      0.000       0.041       0.044\n",
-       "bathrooms      -0.0023      0.000     -8.655      0.000      -0.003      -0.002\n",
+       "Intercept    -111.2464      4.488    -24.788      0.000    -120.043    -102.450\n",
+       "sqft_living     0.4358      0.010     43.434      0.000       0.416       0.455\n",
+       "grade           1.6132      0.032     49.746      0.000       1.550       1.677\n",
+       "bathrooms      -0.0954      0.015     -6.297      0.000      -0.125      -0.066\n",
+       "waterfront      0.3843      0.050      7.736      0.000       0.287       0.482\n",
+       "zipcode         0.0012   4.57e-05     26.261      0.000       0.001       0.001\n",
        "==============================================================================\n",
-       "Omnibus:                      132.821   Durbin-Watson:                   1.979\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              115.297\n",
-       "Skew:                          -0.138   Prob(JB):                     9.20e-26\n",
-       "Kurtosis:                       2.737   Cond. No.                         201.\n",
+       "Omnibus:                       33.323   Durbin-Watson:                   1.980\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               28.754\n",
+       "Skew:                          -0.039   Prob(JB):                     5.70e-07\n",
+       "Kurtosis:                       2.827   Cond. No.                     1.85e+08\n",
        "==============================================================================\n",
        "\n",
        "Notes:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 1.85e+08. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
        "\"\"\""
       ]
      },
-     "execution_count": 65,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "formula_2 = 'price~ sqft_living + grade+ bathrooms'\n",
-    "model_2 = ols(formula_2, house_df_relevant_no_outliers).fit()\n",
-    "model_2.summary()"
+    "formula_2 = 'price~ sqft_living + grade + bathrooms + waterfront + zipcode'\n",
+    "model_4 = ols(formula_2, house_df_relevant_no_outliers).fit()\n",
+    "model_4.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual Price</th>\n",
-       "      <th>Predicted Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13383</th>\n",
-       "      <td>2.677876</td>\n",
-       "      <td>2.642674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18024</th>\n",
-       "      <td>2.631833</td>\n",
-       "      <td>2.638747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7210</th>\n",
-       "      <td>2.609056</td>\n",
-       "      <td>2.640905</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8279</th>\n",
-       "      <td>2.644865</td>\n",
-       "      <td>2.629286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8796</th>\n",
-       "      <td>2.607143</td>\n",
-       "      <td>2.650225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21379</th>\n",
-       "      <td>2.678674</td>\n",
-       "      <td>2.649246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8704</th>\n",
-       "      <td>2.636614</td>\n",
-       "      <td>2.615292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4783</th>\n",
-       "      <td>2.647334</td>\n",
-       "      <td>2.643091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20163</th>\n",
-       "      <td>2.667752</td>\n",
-       "      <td>2.648523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20843</th>\n",
-       "      <td>2.627179</td>\n",
-       "      <td>2.629746</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Actual Price  Predicted Price\n",
-       "13383      2.677876         2.642674\n",
-       "18024      2.631833         2.638747\n",
-       "7210       2.609056         2.640905\n",
-       "8279       2.644865         2.629286\n",
-       "8796       2.607143         2.650225\n",
-       "21379      2.678674         2.649246\n",
-       "8704       2.636614         2.615292\n",
-       "4783       2.647334         2.643091\n",
-       "20163      2.667752         2.648523\n",
-       "20843      2.627179         2.629746"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Actual Price  Predicted Price\n",
+      "13383      770001.0    488992.222060\n",
+      "18024      400001.0    460539.711837\n",
+      "7210       292501.0    479086.793780\n",
+      "8279       480001.0    426536.505306\n",
+      "8796       285001.0    482888.187676\n",
+      "21379      779001.0    545099.009962\n",
+      "8704       427551.0    311738.025241\n",
+      "4783       497001.0    510793.023198\n",
+      "20163      665001.0    570483.458381\n",
+      "20843      375001.0    393563.292815\n"
+     ]
     }
    ],
    "source": [
+    "# Back-transform the log-transformed actual and predicted prices\n",
+    "actual_prices = np.exp(y_test)\n",
+    "predicted_prices = np.exp(y_pred4)\n",
+    "\n",
     "# Create a DataFrame with actual and predicted prices\n",
     "comparison_df = pd.DataFrame({\n",
-    "    'Actual Price': y_test,\n",
-    "    'Predicted Price': y_pred4\n",
+    "    'Actual Price': actual_prices,\n",
+    "    'Predicted Price': predicted_prices\n",
     "})\n",
     "\n",
-    "comparison_df.head(10)"
+    "# Display the first 10 rows of the DataFrame\n",
+    "print(comparison_df.head(10))"
    ]
   },
   {
