--- a/index.ipynb
+++ b/index.ipynb
@@ -14,20 +14,25 @@
     "## Introduction\n",
     "Accurately predicting house prices is essential for buyers, sellers, and investors in the real estate market. This project focuses on predicting house prices in King County, Washington, using multiple linear regression models. We analyze various features such as living space, quality grade, and the number of bathrooms to determine their impact on house prices. By incrementally adding features to our models, we aim to identify the most significant predictors and develop a robust model for price forecasting.\n",
     "\n",
-    "## Key Objectives \n",
+    "## Specific Objectives\n",
     "\n",
-    "1. Develop Accurate Predictive Models for House Prices: Create and evaluate multiple linear regression models to predict house prices in King County.\n",
-    "2. Identify Key Factors Influencing House Prices: Analyze various features to determine their impact on house prices.\n",
-    "3. Provide Actionable Recommendations for Property Value Enhancement based on model results and feature analysis.\n",
-    "4. Guide homeowners and real estate professionals in optimizing property quality and features to increase market value.\n",
+    "1. **Assist Real Estate Investors and Home Buyers:**\n",
+    "   - **Objective:** Determine the influence of square footage on house prices to guide investment and purchasing decisions.\n",
+    "   - **Action:** Identify how changes in square footage affect the overall price of properties.\n",
     "\n",
-    "## Outline\n",
-    "1. Data Analysis and Cleaning: Loaded and cleaned the King County House Sales dataset, handling missing values and outliers.\n",
-    "2. Exploratory Data Analysis (EDA):  Visualized the distribution of house prices and explored relationships between features and prices.\n",
-    "3. Identified key features with the highest correlations to house prices.\n",
-    "4. Model Development: Built and evaluated 4 linear regression models with increasing complexity:\n",
-    "5. Model Evaluation: Assessed model performance using Mean Absolute Error (MAE) and R-squared (R²).\n",
-    "6. Recommendations: Provided actionable insights for homeowners and real estate professionals to enhance property values by focusing on quality improvements and optimizing living space."
+    "2. **Guide Real Estate Agents:**\n",
+    "   - **Objective:** Understand the impact of property grade on house prices to enhance marketing strategies.\n",
+    "   - **Action:** Emphasize the role of property grade in influencing pricing when representing homes to potential buyers.\n",
+    "\n",
+    "3. **Advise Property Developers:**\n",
+    "   - **Objective:** Evaluate the effect of adding bathrooms on property prices to inform development strategies.\n",
+    "   - **Action:** Assess how the inclusion of additional bathrooms impacts property valuation and buyer preferences.\n",
+    "\n",
+    "4. **Support Real Estate Market Analysts:**\n",
+    "   - **Objective:** Analyze the variation in house prices across different zipcodes to refine market assessments.\n",
+    "   - **Action:** Examine how zipcodes affect property prices and identify which areas are associated with higher or lower values.\n",
+    "\n",
+    "These objectives aim to provide a structured approach to leveraging statistical insights for better decision-making in the real estate market."
    ]
   },
   {
