--- a/index.ipynb
+++ b/index.ipynb
@@ -39,38 +39,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DATA UNDERSTANDING\n",
+    "## Data Sources and Suitability\n",
+    "The provided data is from King County House Sales, which includes comprehensive features necessary for predicting house prices as elabolated further below in the data understanding section. The dataset contains houses constructed from  1900 to 2015 and sold between 2014 and 2015, which provides histrical data neccessary for modeliing, and evaluating the effects of different aspects of houses on prices. These properties, and completeness make it suitable for this project.\n",
     "\n",
-    "King  County Housing data contains sales price of properties  sold between y1 and y2 as well as various fetures for specific properties. The colums are well described below:\n",
-    "olumn Names and descriptions for Kings County Data Set\n",
-    "* **id** - unique identifier  for a house\n",
-    "* **dateDate** - This is the date whwn the house was sold\n",
-    "* **pricePrice** -  is prediction target\n",
-    "* **bedroomsNumber** - This is the number  of Bedrooms in the House\n",
-    "* **bathroomsNumber** -  of bathrooms/bedrooms\n",
-    "* **sqft_livingsquare** -  footage of the home\n",
-    "* **sqft_lotsquare** -  footage of the lot\n",
-    "* **floorsTotal** -  floors (levels) in house\n",
-    "* **waterfront** - House which has a view to a waterfront\n",
-    "* **view** - Has been viewed\n",
-    "* **condition** - How good the condition is ( Overall )\n",
-    "* **grade** - overall grade given to the housing unit, based on King County grading system\n",
-    "* **sqft_above** - square footage of house apart from basement\n",
-    "* **sqft_basement** - square footage of the basement\n",
-    "* **yr_built** - Built Year\n",
-    "* **yr_renovated** - Year when house was renovated\n",
-    "* **zipcode** - zip\n",
-    "* **lat** - Latitude coordinate\n",
-    "* **long** - Longitude coordinate\n",
-    "* **sqft_living15** - The square footage of interior housing living space for the nearest 15 neighbors\n",
-    "* **sqft_lot15** - The square footage of the land lots of the nearest 15 neighbors"
+    "## Data Understanding\n",
+    "King County Housing data contains sales price of properties sold between y1 and y2 as well as various fetures for specific properties. The colums are well described below: olumn Names and descriptions for Kings County Data Set\n",
+    "\n",
+    "id - unique identifier for a house\n",
+    "dateDate - This is the date whwn the house was sold\n",
+    "pricePrice - is prediction target\n",
+    "bedroomsNumber - This is the number of Bedrooms in the House\n",
+    "bathroomsNumber - of bathrooms/bedrooms\n",
+    "sqft_livingsquare - footage of the home\n",
+    "sqft_lotsquare - footage of the lot\n",
+    "floorsTotal - floors (levels) in house\n",
+    "waterfront - House which has a view to a waterfront\n",
+    "view - Has been viewed\n",
+    "condition - How good the condition is ( Overall )\n",
+    "grade - overall grade given to the housing unit, based on King County grading system\n",
+    "sqft_above - square footage of house apart from basement\n",
+    "sqft_basement - square footage of the basement\n",
+    "yr_built - Built Year\n",
+    "yr_renovated - Year when house was renovated\n",
+    "zipcode - zip\n",
+    "lat - Latitude coordinate\n",
+    "long - Longitude coordinate\n",
+    "sqft_living15 - The square footage of interior housing living space for the nearest 15 neighbors\n",
+    "sqft_lot15 - The square footage of the land lots of the nearest 15 neighbors"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports "
+    "# Importing Libraries\n",
+    "\n",
+    "In this step, we import the necessary libraries for data manipulation, visualization, and model building. These include:\n",
+    "- `pandas` and `numpy` for data manipulation\n",
+    "- `matplotlib` and `seaborn` for data visualization\n",
+    "- `sklearn` for machine learning model development\n"
    ]
   },
   {
