--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,23 +102,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Datasets"
+    "# Loading the Dataset\n",
+    "\n",
+    "Here, we load the dataset containing house sales data from King County. This dataset includes various features related to the properties sold, which we will use for our analysis and model building."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load data sets\n",
-    "file_path = r\"C:\\Users\\GeorgeC\\Documents\\Flatiron\\Phase2\\Group-5-phase-2-project\\Data\\kc_house_data.csv\"\n",
+    "file_path = \"https://raw.githubusercontent.com/lauramwichekha/Group-5-phase-2-project/main/kc_house_data.csv\"\n",
     "df = pd.read_csv(file_path)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inspecting the Data\n",
+    "\n",
+    "A quick look at the first few rows of the dataset to understand its structure and the type of data it contains. This helps in identifying any immediate issues or areas that need cleaning."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +327,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +356,7 @@
     }
    ],
    "source": [
-    "#comment on the data\n",
+    "#Checking the column names \n",
     "\n",
     "print(f\"df.columns:{df.columns}\")\n",
     "print(f\"df.shape: {df.shape}\")"
